# gfsmppnccombine

./: .gitignore  README.md  setup.cfg
conda/: meta.yaml
docs/: Makefile  conf.py  index.rst
gfsRed2Reg/: __init__.py  cli.py  test.ipynb
gfsmppnccombine/: __init__.py  cli.py  gfsmppnccombine.py  test.ipynb
