[metadata]
name = gfsRed2Reg
author = Prajeesh A G
author-email = prajeesh.cat@tropmet.res.in
summary = Regrids the gfs_nc_io produced netCDF files from reduced grid to regular grid
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7

[files]
packages = 
    gfsRed2Reg

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True

[entry_points]
console_scripts =
    splitvar=gfsRed2Reg.cli:main_argv

[extras]
dev = 
    pytest
    sphinx
    recommonmark
    dask

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tools.pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore doc/conf.py
